# SuperSonicBotCanaryTeam

./: config.json  main(transferring cmds to cogs lol).py  main.py  package.json  pyproject.toml  webserver.py
cogs/: changeprefix.py  connect4.py  eval.py  events.py  feedback.py  fun.py  general.py  giveaway.py  info.py  maths.py  moderation.py  music.py
json/: prefixes.json
webserver/: config.json
webserver/html/: index.html
webserver/static/: test.txt
