[tool.poetry]
name = "supersonicbot-canary"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
flask = "^1.1.2"
python-dotenv = "^0.15.0"
giphy-client = "^1.0.0"
praw = "^7.2.0"
aiofiles = "^0.6.0"
utils = "^1.0.1"
youtube-dl = "^2021.3.14"
PyNaCl = "^1.4.0"
ffmpeg = "^1.4"
timedelta = "^2020.12.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
